sfdx-source/force-app/main/default/objects/Lead/fields/Additional_Verticals__c.field-meta.xml
<CustomField>
    <fullName>Additional_Verticals__c</fullName>
    <description>LEM-14186: It stores the information about the additional verticals.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>This field stores the information about the additional verticals</inlineHelpText>
    <label>Additional Verticals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>