sfdx-source/force-app/main/default/objects/Lead/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13404: It stores corresponding GEO API Address ID.</description>
    <inlineHelpText>This field will store the corresponding GEO API Address ID</inlineHelpText>
    <label>Address ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>