sfdx-source/force-app/main/default/objects/Lead/fields/Address_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13404: It represents the address rejection reasons.</description>
    <inlineHelpText>This field represents the Address verification rejection reason.</inlineHelpText>
    <label>Address Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Rejection_Reason</valueSetName>
    </valueSet>
</CustomField>