sfdx-source/force-app/main/default/objects/Lead/fields/Address_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13404: It stores Address verification date for an entity address.</description>
    <inlineHelpText>Date in which Address has been verified</inlineHelpText>
    <label>Address Verification Date</label>
    <type>DateTime</type>
</CustomField>