sfdx-source/force-app/main/default/objects/Lead/fields/Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Verification_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13402,LEM-13404: It stores account status in order to validate entity address.</description>
    <label>Address Verification Status</label>
     <inlineHelpText>Displays the status of Lead address verification</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
                <default>true</default>
                <label>Unverified</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>