sfdx-source/force-app/main/default/objects/Lead/fields/Are_Required_Fields_Blank__c.field-meta.xml
<CustomField>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Are_Required_Fields_Blank__c</fullName>
    <description>LEM-14086: It is created to store the information about required fields being populated on Lead.</description>
    <formula>OR(
  ISBLANK(TEXT(LeadSource)),
  ISBLANK(TEXT(Days_Since_Last_Status_Change__c)),
  ISBLANK(SocialMediaURL__c),
  ISBLANK(TEXT(PrimaryVertical__c)),
  ISBLANK(TEXT(NumberOfLocations__c))
)</formula>
    <label>Are Required Fields Blank?</label>
    <type>Checkbox</type>
</CustomField>