sfdx-source/force-app/main/default/objects/Lead/fields/BestTimeToCall__c.field-meta.xml
<CustomField>
    <fullName>BestTimeToCall__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It indicates best time periods for reps to call the Lead or resturant.</description>
    <inlineHelpText>Best time periods for reps to call the Lead/Rx</inlineHelpText>
    <label>Best Time to Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9 am -11 am</fullName>
            </value>
            <value>
                <fullName>11 am - 1 pm</fullName>
            </value>
            <value>
                <fullName>1 pm - 3 pm</fullName>
            </value>
            <value>
                <fullName>3 pm - 5 pm</fullName>
            </value>
            <value>
                <fullName>5 pm- 7 pm</fullName>
            </value>
            <value>
                <fullName>7 pm- 9 pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>