sfdx-source/force-app/main/default/objects/Lead/fields/Blocker_Objections__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Objections__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13398: It represents any blocker or objections in Lead creation.</description>
    <label>Blocker / Objections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>