sfdx-source/force-app/main/default/objects/Lead/fields/Brizo_ID__c.field-meta.xml
<CustomField>
    <fullName>Brizo_ID__c</fullName>
    <label>Brizo ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>