sfdx-source/force-app/main/default/objects/Lead/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13400: It stores total task count of all calls completed with the Lead.</description>
    <inlineHelpText>Total count of completed calls associated with the Lead</inlineHelpText>
    <label>Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>