sfdx-source/force-app/main/default/objects/Lead/fields/Came_Into_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13402: It indicates when the Lead became in coverage.</description>
    <inlineHelpText>Indicates when the Lead came into Coverage</inlineHelpText>
    <label>Came Into Coverage</label>
    <type>DateTime</type>
</CustomField>