sfdx-source/force-app/main/default/objects/Lead/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It stores existing competitors resturant utilizes.</description>
    <inlineHelpText>Existing competitors Rx utilizes</inlineHelpText>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Postmates</fullName>
            </value>
            <value>
                <fullName>GrubHub</fullName>
            </value>
            <value>
                <fullName>Ubereats</fullName>
            </value>
            <value>
                <fullName>Uber</fullName>
            </value>
            <value>
                <fullName>Instacart</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>