sfdx-source/force-app/main/default/objects/Lead/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>It indicates whether the Lead is in coverage or not.</description>
    <inlineHelpText>Indicates whether a Lead is in coverage for DoorDash. If not, this Lead should not be pursued</inlineHelpText>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Coverage</fullName>
            </value>
            <value>
                <fullName>Not In Coverage</fullName>
            </value>
            <value>
                <fullName>Coverage Check Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>