sfdx-source/force-app/main/default/objects/Lead/fields/CuisineType__c.field-meta.xml
<CustomField>
    <fullName>CuisineType__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It classifies the cuisine of the restaurant.</description>
    <inlineHelpText>Classifies the cuisine of the Rx</inlineHelpText>
    <label>Cuisine Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>