sfdx-source/force-app/main/default/objects/Lead/fields/Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Activity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13400: It represents number of days since the most recent activity.</description>
    <formula>IF(
      ISBLANK(Last_Qualified_Activity__c),
      null,
      IF(
        TODAY() - DATEVALUE(TEXT(Last_Qualified_Activity__c)) &lt; 0,
        0,
        TODAY() - DATEVALUE(TEXT(Last_Qualified_Activity__c))
      )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days since the most recent activity</inlineHelpText>
    <label>Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>