sfdx-source/force-app/main/default/objects/Lead/fields/Days_since_last_status_change__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Status_Change__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-21484: It represents number of days since the most recent completed activity.</description>
    <inlineHelpText>Number of days since the last status change on the Lead was completed</inlineHelpText>
    <formula>IF(
      ISBLANK(Last_Status_Change_Date__c),
      null,
      IF(
        TODAY() - DATEVALUE(TEXT(Last_Status_Change_Date__c)) &lt; 0,
        0,
        TODAY() - DATEVALUE(TEXT(Last_Status_Change_Date__c))
      )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Status Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>