sfdx-source/force-app/main/default/objects/Lead/fields/DeckRank__c.field-meta.xml
<CustomField>
    <fullName>DeckRank__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It represents expected value of stores within a business group.</description>
    <inlineHelpText>Represents expected value of stores within a business group</inlineHelpText>
    <label>Deck Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ace</fullName>
            </value>
            <value>
                <fullName>King</fullName>
            </value>
            <value>
                <fullName>Queen</fullName>
            </value>
            <value>
                <fullName>Jack</fullName>
            </value>
            <value>
                <fullName>Joker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>