sfdx-source/force-app/main/default/objects/Lead/fields/Disposition_Details__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Details__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13419: It stores disposition details on Lead.</description>
    <inlineHelpText>Details for Lead moving to Not Interested - Cool Down status</inlineHelpText>
    <label>Disposition Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disposition_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No interest in 3rd party delivery</fullName>
            </value>
            <value>
                <fullName>Do not buy into Incrementality</fullName>
            </value>
            <value>
                <fullName>Delivery Pricing</fullName>
            </value>
            <value>
                <fullName>Grub Hub</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Postmates</fullName>
            </value>
            <value>
                <fullName>Seamless</fullName>
            </value>
            <value>
                <fullName>Skip the Dishes</fullName>
            </value>
            <value>
                <fullName>Uber Eats</fullName>
            </value>
            <value>
                <fullName>Change of Ownership</fullName>
            </value>
            <value>
                <fullName>Kitchen at Capacity</fullName>
            </value>
            <value>
                <fullName>POS Integration</fullName>
            </value>
            <value>
                <fullName>Undergoing new menu</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Order Capping/Throttling</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>