sfdx-source/force-app/main/default/objects/Lead/fields/Disposition_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13419: It stores disposition Reason of Disqualified or Not Interested Lead.</description>
    <inlineHelpText>Reason for Lead moving to  Disqualified or Not Interested - Cool Down status</inlineHelpText>
    <label>Disposition Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Info</fullName>
            </value>
            <value>
                <fullName>Mx Out of Business</fullName>
            </value>
            <value>
                <fullName>Out of Coverage</fullName>
            </value>
            <value>
                <fullName>Not a Merchant</fullName>
            </value>
            <value>
                <fullName>Current DoorDash Partner</fullName>
            </value>
            <value>
                <fullName>Not Bought into Value Prop</fullName>
            </value>
            <value>
                <fullName>Exclusive with Competitor</fullName>
            </value>
            <value>
                <fullName>Operational Obstacles</fullName>
            </value>
            <value>
                <fullName>Pricing Concerns</fullName>
            </value>
            <value>
                <fullName>Product/Feature Blockers</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>