sfdx-source/force-app/main/default/objects/Lead/fields/Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Count__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13400: It stores total task count of emails sent to the Lead.</description>
    <inlineHelpText>Total task count of emails sent to or received from the Lead</inlineHelpText>
    <label>Email Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>