sfdx-source/force-app/main/default/objects/Lead/fields/EmailVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>EmailVerificationStatus__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It verifies that email address is accurate and legitimate.</description>
    <inlineHelpText>Verification that email address is accurate &amp; legitimate</inlineHelpText>
    <label>Email Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>