sfdx-source/force-app/main/default/objects/Lead/fields/First_Qualified_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Qualified_Activity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13400: It represents date of initial activity on the Lead.</description>
    <inlineHelpText>Date of initial activity on the Lead</inlineHelpText>
    <label>First Qualified Activity</label>
    <type>DateTime</type>
</CustomField>