sfdx-source/force-app/main/default/objects/Lead/fields/HoursOfOperation__c.field-meta.xml
<CustomField>
    <fullName>HoursOfOperation__c</fullName>
    <description>LEM-13618: It indicates the hours during which the restaurant is open.</description>
    <inlineHelpText>Hours the Rx is open</inlineHelpText>
    <label>Hours of Operation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>