sfdx-source/force-app/main/default/objects/Lead/fields/In_Coverage__c.field-meta.xml
<CustomField>
    <fullName>In_Coverage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13398: It signifies if the Lead is within DoorDash Coverage.</description>
    <inlineHelpText>Signifies if the Lead is within DoorDash Coverage</inlineHelpText>
    <label>In Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>