sfdx-source/force-app/main/default/objects/Lead/fields/Inbound_Ingestion_Log__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Ingestion_Log__c</fullName>
    <description>LEM-16814: It is used to store related Inbound Ingestion log Id.</description>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Ingestion Log</label>
    <referenceTo>Inbound_Ingestion_Log__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>