sfdx-source/force-app/main/default/objects/Lead/fields/KitchenType__c.field-meta.xml
<CustomField>
    <fullName>KitchenType__c</fullName>
    <description>LEM-14186 : It stores the information about the type of kitchen.</description>
    <inlineHelpText>This field stores the information about the type of kitchen</inlineHelpText>
    <label>Kitchen Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Kitchen_Type</valueSetName>
    </valueSet>
</CustomField>