sfdx-source/force-app/main/default/objects/Lead/fields/Last_Coverage_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Coverage_Check_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13402: It indicates the time when the last coverage check was run.</description>
    <inlineHelpText>Indicates when the last Lead Coverage Check was run</inlineHelpText>
    <label>Last Coverage Check</label>
    <type>DateTime</type>
</CustomField>