sfdx-source/force-app/main/default/objects/Lead/fields/Last_Email_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Received_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14152: It indicates the date when the last Email Message was received.</description>
    <label>Last Email Received Date</label>
    <type>Date</type>
</CustomField>