sfdx-source/force-app/main/default/objects/Lead/fields/Last_Meeting_Ran__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Ran__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13400: It represents date of the last completed meeting with the Lead.</description>
    <inlineHelpText>Date of the last completed meeting with the Lead</inlineHelpText>
    <label>Last Meeting Ran</label>
    <type>DateTime</type>
</CustomField>