sfdx-source/force-app/main/default/objects/Lead/fields/Last_Qualified_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Qualified_Activity__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13400: It represents most recent date of activity on the Lead.</description>
    <inlineHelpText>Most recent date of activity on the Lead</inlineHelpText>
    <label>Last Qualified Activity</label>
    <type>DateTime</type>
</CustomField>