sfdx-source/force-app/main/default/objects/Lead/fields/Last_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-21484: It is used to stamp the date when last status change occurred.</description>
    <label>Last Status Change Date</label>
    <type>Date</type>
</CustomField>