sfdx-source/force-app/main/default/objects/Lead/fields/Lead_Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14727: It stores the Lead conversion type to be either Manual or Auto.</description>
    <label>Lead Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>