sfdx-source/force-app/main/default/objects/Lead/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13401: It stores the 18 digit SFDC Id for the account.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id</label>
    <type>Text</type>
</CustomField>