sfdx-source/force-app/main/default/objects/Lead/fields/MarketingNotes__c.field-meta.xml
<CustomField>
    <fullName>MarketingNotes__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It captures information regarding the Lead&apos;s interactions and responses to marketing initiatives.</description>
    <label>Marketing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>