sfdx-source/force-app/main/default/objects/Lead/fields/MedalRank__c.field-meta.xml
<CustomField>
    <fullName>MedalRank__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618: It represents individual store ranking within a starting point.</description>
    <inlineHelpText>Represents individual store ranking within a starting point</inlineHelpText>
    <label>Medal Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Tin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>