sfdx-source/force-app/main/default/objects/Lead/fields/Meeting_Set__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Set__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13400: It represents upcoming meeting Date &amp; Time set with the Lead.</description>
    <inlineHelpText>Upcoming meeting Date &amp; Time set with the Lead</inlineHelpText>
    <label>Meeting Set</label>
    <type>DateTime</type>
</CustomField>