sfdx-source/force-app/main/default/objects/Lead/fields/Menu_URL__c.field-meta.xml
<CustomField>
    <fullName>Menu_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14819: It stores Menu URL from SSMO on Lead.</description>
    <label>Menu URL</label>
    <type>Url</type>
</CustomField>