sfdx-source/force-app/main/default/objects/Lead/fields/Mx_Database_Id__c.field-meta.xml
<CustomField>
    <fullName>Mx_Database_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13543: It stores the Mx Database Id of related Mx.</description>
    <externalId>true</externalId>
    <label>Mx Database Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>