sfdx-source/force-app/main/default/objects/Lead/fields/NumberOfLocations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfLocations__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13618 : It represents number of locations of the resturant.</description>
    <inlineHelpText>Number of locations of the Rx</inlineHelpText>
    <label>Number of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>