sfdx-source/force-app/main/default/objects/Lead/fields/Opt_Out_of_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Marketing__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>LEM-16624: Selection of “Opt out of Communications” button will result in this field being selected, which is used to indicate in Cassie that a Mx has opted out of all communications (both marketing &amp; transactional).</description>
    <label>Opt Out of Marketing</label>
    <type>Checkbox</type>
</CustomField>