sfdx-source/force-app/main/default/objects/Lead/fields/Order_Protocol_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol_Email__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14727: It stores the Order Protocol Email from SSMO on Lead.</description>
    <label>Order Protocol Email</label>
    <type>Email</type>
</CustomField>