sfdx-source/force-app/main/default/objects/Lead/fields/ortoo_qra__Q_assign_Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Q_assign_Last_Assigned_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Q-assign last assigned date</description>
    <inlineHelpText>Most recent date Lead was assigned to a Rep via qassign</inlineHelpText>
    <label>Q-assign Last Assigned Date</label>
    <type>DateTime</type>
</CustomField>