sfdx-source/force-app/main/default/objects/Lead/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14727: It stores package description from SSMO on Lead.</description>
    <label>Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>